--- a/src/app.css
+++ b/src/app.css
@@ -65,7 +65,7 @@ body {
 .board-with-coordinates {
     display: flex;
     align-items: center;
-    margin: 10px 0;
+    margin: 0;
     width: 100%;
     justify-content: center;
 }
@@ -77,7 +77,7 @@ body {
     justify-content: space-around;
     height: 480px;
     margin-right: 10px;
-    font-size: 0.9rem;
+    font-size: 1rem;
     color: var(--accent-color);
     font-weight: bold;
 }
@@ -87,8 +87,8 @@ body {
     justify-content: space-between;
     width: 480px;
     padding-left: 40px;
-    padding-right: 2px;
-    font-size: 0.9rem;
+    padding-right: 1px;
+    font-size: 1rem;
     color: var(--accent-color);
     font-weight: bold;
     box-sizing: border-box;
@@ -109,7 +109,7 @@ body {
     width: 60px;
     height: 60px;
     position: relative;
-    transition: background-color 0.2s;
+
 }
 
 #tabuleiro td.light {
